Added dns in docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium-hub
+    dns:
+      - 8.8.8.8
     volumes:
       - ./test-output:/project/test-output
     environment:
