Changes for Jenkins Run

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,4 +43,4 @@ services:
     volumes:
       - ./test-output:/project/test-output
     environment:
-      - suiteXmlFile=${SUITE_FILENAME}
+      - suiteXmlFile=${suiteXmlFile}
